babel,webpack, classes and Maps

--- a/Session-4/closure.html
+++ b/Session-4/closure.html
@@ -20,7 +20,8 @@
 
 
         /*
-        declare varible with var parent scope,
+        declare varible with 
+        var parent scope,
         let (value can change with block scope),
         const (Constant- will not change with block scope)
         */
