--- a/Session-4/function.html
+++ b/Session-4/function.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Function Defination and Calling</h2>
     <script>
-
         //function defination
         function add(a,b){
             return a+b;
         }
         function cube(n){
-            return n*n*n;
+            return n*n*n; //returning a value
         }
 
 
